; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/arm_atsam/usb/extr_usb_device_udd.c_udd_ep_get_job.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/arm_atsam/usb/extr_usb_device_udd.c_udd_ep_get_job.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@udd_ep_job = common dso_local global i32* null, align 8
@USB_EP_ADDR_MASK = common dso_local global i32 0, align 4
@USB_EP_DIR_IN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32)* @udd_ep_get_job to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @udd_ep_get_job(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp eq i32 %4, 0
  br i1 %5, label %9, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* %3, align 4
  %8 = icmp eq i32 %7, 128
  br i1 %8, label %9, label %10

9:                                                ; preds = %6, %1
  store i32* null, i32** %2, align 8
  br label %26

10:                                               ; preds = %6
  %11 = load i32*, i32** @udd_ep_job, align 8
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* @USB_EP_ADDR_MASK, align 4
  %14 = and i32 %12, %13
  %15 = mul nsw i32 2, %14
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* @USB_EP_DIR_IN, align 4
  %18 = and i32 %16, %17
  %19 = icmp ne i32 %18, 0
  %20 = zext i1 %19 to i64
  %21 = select i1 %19, i32 1, i32 0
  %22 = add nsw i32 %15, %21
  %23 = sub nsw i32 %22, 2
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i32, i32* %11, i64 %24
  store i32* %25, i32** %2, align 8
  br label %26

26:                                               ; preds = %10, %9
  %27 = load i32*, i32** %2, align 8
  ret i32* %27
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
